--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@ table.bitvector .unused {
   color: rgb(241, 241, 206);
   border-style: none;
 }
+table#cuckooFilter td {
+  width: 4em;
+}
 table.features {
   width: 80%;
   border-width: 1px;
@@ -124,6 +127,9 @@ table.features td.winner {
   transform: rotate(270deg);
   transform-origin: right bottom 0;
   float: left;
+}
+blockquote {
+  font-style: italic;
 }
 
 </style>
@@ -213,6 +219,7 @@ $(function() {
     $.publish('/action/' + action, [val, hashes(val), fingerprint(val)]);
   });
 
+  $(".filterBits").text("( " + NUMBITS + " bits )");
   $("#inputStr").focus();
 });
 
@@ -222,17 +229,28 @@ $(function() {
     <h1>Probablistic Filters By Example</h1>
 
     <p>Probablistic filters are high-speed, space-efficient data structures that support set-membership 
-    tests with a one-sided error. A probabilistic filter can claim that an given entry is <em>definitely not</em> 
-    represented in the set, or <em>might</em> be represented in the set. That is, negative responses are
+    tests with a one-sided error. These filters can claim that a given entry is <em>definitely not</em> 
+    represented in a set of entries, or <em>might</em> be represented in the set. That is, negative responses are
     conclusive, whereas positive responses incur a small false positive probability (FPP).</p>
 
     <p>The trade-off for this one-sided error is space-efficiency. Cuckoo Filters and Bloom Filters
-    require approximately 7 bits per entry at 3% FPP, regardless of the size of the entries.</p>
+    require approximately 7 bits per entry at 3% FPP, regardless of the size of the entries. This makes
+    them useful for applictations where the volume of original data makes traditional storage impractical.</p>
+
+    <p><strong>Bloom filters</strong> have been in use since the 1970s and are well understood. Implementations are widely
+    available. Variants exist that support deletion and counting, though with expanded storage requirements.</p>
+
+    <p><strong>Cuckoo filters</strong> were described in 
+    <a href='https://www.cs.cmu.edu/~dga/papers/cuckoo-conext2014.pdf'>Cuckoo Filter: Practically Better Than Bloom</a>, 
+    a paper by researchers at CMU in 2014. Cuckoo filters improve on Bloom filters by supporting deletion,
+    limited counting, and bounded FPP with similar storage efficiency as a standard Bloom filter.</p> 
+
+    <p>Below is side-by-side simulation of the inner workings of Cuckoo and Bloom filters.</p>
 
     <div class="insetbox" align="center">
       <h2>Probablistic Filters Visualized</h2>
       <table class="superstructure">
-        <tr><th>Cuckoo Filter</th><th>Bloom Filter</th></tr>
+        <tr><th>Cuckoo Filter <span class='filterBits'></span></th><th>Bloom Filter <span class='filterBits'></span></th></tr>
         <tr>
           <td valign="top">
             <span class="vertical-text">Buckets</span>
@@ -360,11 +378,11 @@ $(function() {
             <span class='stats'>
               <p>FPP: <span id='cuckooFPP'>0</span>%</p>
               <p>In filter: <span id='liveInCuckoo'></span></p>
-              <p>Fingerprint (<span id='cuckooBitsPerFp'></span>-bit): <span id='liveFingerprint'></span></p>
+              <p>Fingerprint (<span class='cuckooBitsPerFpp'></span>-bit): <span id='liveFingerprint'></span></p>
             </span>
             <script>
               $(function() {
-                $('#cuckooBitsPerFp').text("" + NUM_BITS_PER_ENTRY);
+                $('.cuckooBitsPerFpp').text("" + NUM_BITS_PER_ENTRY);
               });
               $.subscribe('/cuckoo/modified', function(){
                 var totalEntries = $("[id^=cuckooEntry]").toArray().length;
@@ -488,25 +506,23 @@ $(function() {
       </script>
     </div>
     <br />
-    <div class='insetbox'>
+    <!-- <div class='insetbox'> -->
     <h2>How do they work?</h2>
     <p><strong>Cuckoo Filters</strong> operate by hasing an entry with one hash function, and inserting a small f-bit fingerprint of 
     the entry into an open position in either of two alternate buckets. When both buckets are full, the filter recursively 
-    <em><a href='https://en.wikipedia.org/wiki/Cuckoo_hashing'>kicks</a></em> existing entries to their alternate buckets until 
-    space is found or attempts are exhausted. Queries repeat the hash function and check both buckets for the fingerprint. When a 
+    <a href='https://en.wikipedia.org/wiki/Cuckoo_hashing'>kicks</a> existing entries to their alternate buckets until 
+    space is found or attempts are exhausted. Lookups repeat the hash function and check both buckets for the fingerprint. When a 
     matching fingerprint is not found, the entry is <em>definitely not</em> in the filter. When a matching fingerprint is found in 
     either bucket, the entry <em>might</em> be in the filter. False positives occur when another entry inserted a mathcing 
     fingerprint into either of the two checked buckets. Deletion is supported by removing one instance of an entry's fingerprint from
-    either bucket.
+    either bucket. Counting is supported by inserting multiple fingerprints of the same value into the same pair of buckets.
     </p>
 
     <p><strong>Bloom Filters</strong> operate by hashing an entry with k hash functions, and setting k bits within a bit vector upon
-    insertion. Queries repeat the k hash functions and check the corresponding bits. When any checked bit is not set,
+    insertion. Lookups repeat the k hash functions and check the corresponding bits. When any checked bit is not set,
     the entry is <em>definitely not</em> in the filter. When all checked bits are set, the entry <em>might</em> be in the
     filter. False positives occur when all checked bits happen to be set by any combination of previously inserted entries.</p>
-    </div>
-    <br />
-    <div class='insetbox'>
+
     <h2>What are they good for?</h2>
       <p>Probabilistic filters are used in a variety of applications where slow or expensive operations can be
       avoided prior to execution by a consulting comparitavely fast or cheap set membership test.</p>
@@ -517,33 +533,33 @@ $(function() {
 
       <p><strong>Edge filtering: </strong>
       filter data can be distributed to the edges of networks, similar to edge caching, where queries for 
-      potentially non-existent data received at the edge can be filtered out quickly.</p>
-    </div>
-    <br />
-    <div class='insetbox'>
+      potentially non-existent data received at the edge can be filtered out quickly. Unlike a cache, a copy of original
+      data is not stored in the filter.</p>
+
     <h2>Which should I choose?</h2>
-      <p><strong>tl;dr </strong>Choose Cuckoo if available unless your application is timing sensitive on insertion.</p>
+      <p>Choose Cuckoo, if available, unless your application is timing sensitive on insertion. Though Cuckoo filters outperform
+      Bloom filters on insertion at first - O(1) vs O(k), respectively - their insertion performance drops off due to
+      recursive entry "kicking" as the filter approaches its max capacity.</p>
 
       <blockquote>...for reasonably large sized sets, for the same false positive rate as a corresponding Bloom filter, cuckoo filters use less space than Bloom filters, are faster on lookups (but slower on insertions/to construct), and amazingly also allow deletions of keys (which Bloom filters cannot do). -<a href='http://mybiasedcoin.blogspot.com/2014/10/cuckoo-filters.html'>Michael Mitzenmacher (2014)</a></blockquote>
 
+      <div class='insetbox'>
+        <table class='features'>
+          <tr><th>&nbsp;</th><th>Cuckoo Filter</th><th>Bloom Filter</th></tr>
+          <tr><th>Insert</th><td>Variable. O(1) amortized.<small><br>longer as load factor approaches capacity</small></td><td class='winner'>O(k)<small><br>fixed</small></td></tr>
+          <tr><th>As load increases</th><td class='winner'>Insertions may be rejected<br />FPP trends toward desired max</td><td>Insertions cannot be rejected<br />FPP trends toward 100%</td></tr>
+          <tr><th>Lookup</th><td class='winner'>O(1) to O(2)</td><td>Variable. O(log<sub>2</sub>[1/fpp]) to O(k)</td></tr>
+          <tr><th>Count</th><td class='winner'>O(2)<small><br/>minimal suport: max == entries per bucket X 2</small></td><td><em>unsupported</em></td></tr>
+          <tr><th>Delete</th><td class='winner'>O(1) to O(2)</td><td><em>unsupported</em></td></tr>
+          <tr><th>Bits per entry</th><td class='winner'>smaller when desired FPP &lt;= 3% </td><td>smaller when desired FPP &gt; 3% </td></tr>
+          <tr><th>Availability</th><td>limited (as of early 2016)<small><br />
+            <a href='https://github.com/efficient/cuckoofilter'>cpp</a>
+            <a href='https://github.com/bdupras/guava-probably'>java</a>
+            <a href='https://github.com/seiflotfy/cuckoofilter'>go</a>
+          </small></td><td class='winner'>widely available</a></td></tr>
+        </table>
+      </div>
 
-      <table class='features'>
-        <tr><th>&nbsp;</th><th>Cuckoo Filter</th><th>Bloom Filter</th></tr>
-        <tr><th>Insert</th><td>Variable. O(1) amortized.<small><br>longer as load factor approaches capacity</small></td><td class='winner'>O(k)<small><br>fixed</small></td></tr>
-        <tr><th>As load increases</th><td class='winner'>Insertions may be rejected<br />FPP trends toward desired max</td><td>Insertions cannot be rejected<br />FPP trends toward 100%</td></tr>
-        <tr><th>Lookup</th><td class='winner'>O(1) to O(2)</td><td>Variable. O(log<sub>2</sub>[1/fpp]) to O(k)</td></tr>
-        <tr><th>Count</th><td class='winner'>O(2)<small><br/>minimal suport: max == entries per bucket X 2</small></td><td><em>unsupported</em></td></tr>
-        <tr><th>Delete</th><td class='winner'>O(1) to O(2)</td><td><em>unsupported</em></td></tr>
-        <tr><th>Bits per entry</th><td class='winner'>smaller when desired FPP &lt;= 3% </td><td>smaller when desired FPP &gt; 3% </td></tr>
-        <tr><th>Availability</th><td>limited (as of early 2016)<small><br />
-          <a href='https://github.com/efficient/cuckoofilter'>cpp</a>
-          <a href='https://github.com/bdupras/guava-probably'>java</a>
-          <a href='https://github.com/seiflotfy/cuckoofilter'>go</a>
-        </small></td><td class='winner'>widely available</a></td></tr>
-      </table>
-    </div>
-    <br />
-    <div class='insetbox'>
     <h2>See also</h2>
       <ul>
         <li><a href='https://www.cs.cmu.edu/~dga/papers/cuckoo-conext2014.pdf'>Cuckoo Filter: Practically Better Than Bloom</a>, Bin Fan, et al.
