remove input focus() on load

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ $(function() {
   });
 
   $(".filterBits").text("( " + NUMBITS + " bits )");
-  $("#inputStr").focus();
+  // $("#inputStr").focus(); // causes page to scroll
 });
 
 </script>
