--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ $(function() {
 </script>
 </head><body>
 <div id='content'>
-    <h1>Probablistic Filters By Example</h1>
+    <h1>Probabilistic Filters By Example</h1>
 
     <p>Probablistic filters are high-speed, space-efficient data structures that support set-membership 
     tests with a one-sided error. These filters can claim that a given entry is <em>definitely not</em> 
