Add link to Cuckoo filter Wikipedia article

--- a/index.html
+++ b/index.html
@@ -611,6 +611,7 @@ $(function() {
         <li><a href='http://mybiasedcoin.blogspot.com/2014/10/cuckoo-filters.html'>Cuckoo Filters</a>, Michael Mitzenmacher
         <li><a href='http://billmill.org/bloomfilter-tutorial/'>Bloom Filters by Example</a>, Bill Mill
         <li><a href='https://en.wikipedia.org/wiki/Bloom_filter'>Bloom filter on Wikipedia</a>
+        <li><a href='https://en.wikipedia.org/wiki/Cuckoo_filter'>Cuckoo filter on Wikipedia</a>
       </ul>
     </div>
 </div>
