Use HTTPS for links

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ $(function() {
       Bloom filters on insertion at first - O(1) vs O(k), respectively - their insertion performance drops off due to
       recursive entry "kicking" as the filter approaches its max capacity.</p>
 
-      <blockquote>...for reasonably large sized sets, for the same false positive rate as a corresponding Bloom filter, cuckoo filters use less space than Bloom filters, are faster on lookups (but slower on insertions/to construct), and amazingly also allow deletions of keys (which Bloom filters cannot do). -<a href='http://mybiasedcoin.blogspot.com/2014/10/cuckoo-filters.html'>Michael Mitzenmacher (2014)</a></blockquote>
+      <blockquote>...for reasonably large sized sets, for the same false positive rate as a corresponding Bloom filter, cuckoo filters use less space than Bloom filters, are faster on lookups (but slower on insertions/to construct), and amazingly also allow deletions of keys (which Bloom filters cannot do). -<a href='https://mybiasedcoin.blogspot.com/2014/10/cuckoo-filters.html'>Michael Mitzenmacher (2014)</a></blockquote>
 
       <div class='insetbox'>
         <table class='features'>
@@ -608,8 +608,8 @@ $(function() {
     <h2>See also</h2>
       <ul>
         <li><a href='https://www.cs.cmu.edu/~dga/papers/cuckoo-conext2014.pdf'>Cuckoo Filter: Practically Better Than Bloom</a>, Bin Fan, et al.
-        <li><a href='http://mybiasedcoin.blogspot.com/2014/10/cuckoo-filters.html'>Cuckoo Filters</a>, Michael Mitzenmacher
-        <li><a href='http://billmill.org/bloomfilter-tutorial/'>Bloom Filters by Example</a>, Bill Mill
+        <li><a href='https://mybiasedcoin.blogspot.com/2014/10/cuckoo-filters.html'>Cuckoo Filters</a>, Michael Mitzenmacher
+        <li><a href='https://billmill.org/bloomfilter-tutorial/'>Bloom Filters by Example</a>, Bill Mill
         <li><a href='https://en.wikipedia.org/wiki/Bloom_filter'>Bloom filter on Wikipedia</a>
       </ul>
     </div>
